# scopepilot

./: .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml
.codex/skills/add-agent-module/: SKILL.md
.codex/skills/add-approval-endpoint/: SKILL.md
.codex/skills/add-evidence-schema/: SKILL.md
.codex/skills/add-policy-rule/: SKILL.md
.codex/skills/improve-report-template/: SKILL.md
app/: __init__.py  main.py
app/adapters/: base.py  mock_tools.py
app/agents/: __init__.py  evidence_report.py  hypothesis.py  recon_analyst.py  report_agent.py  scope_guard.py
app/api/: deps.py  routes.py
app/core/: __init__.py  config.py  logging.py
app/db/: database.py  models.py
app/frontend/: app.js  index.html  styles.css
app/repositories/: __init__.py  evidence_store.py
app/schemas/: enums.py  evidence_store.py  hypothesis_engine.py  models.py  report_agent.py  scope_guard.py
app/services/: approval_workflow.py  decision_log.py  evidence_store.py  hypothesis_engine.py  report_agent.py  scope_guard.py  simple_queue.py
bug_bounty_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md  evidence_store.md  report_agent.md
frontend/: .env.example  .gitignore  components.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/approvals/: page.tsx
frontend/lib/: format.ts  selectors.ts
scripts/: seed_demo.py
tests/: test_approval_api.py  test_evidence_store_repository.py  test_hypothesis_engine.py  test_report_agent.py  test_scope_guard.py
(+43 files in other folders)
