[project]
name = "bug-bounty-copilot"
version = "0.1.0"
description = "MVP defensável de Bug Bounty Copilot com fluxo human-in-the-loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
